2007-04-08  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (boundary3d do_3dplot): Do not reserve space on the
	canvas for a key if the key is disabled altogether.
	Bug #1695643

2007-04-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/command.c src/mouse.c src/scanner.c src/set.c src/show.c
	src.unset.c src/variable.c src/variable.h:  Instead of immediately
	applying the locale requested by "set decimal locale {foo}", save the
	requested locale string and apply it only during execution of gprintf().
	This prevents leakage of the numeric locale into terminal driver code
	(Bug #1692541), and simplifies the code used in save and show.

	* src/command.c (save_command test_palette_subcommand)
	src/save.c (save_set_all): Consolidate save of "set decimal locale"
	into save_set_all rather than the multiple calling routines.

2007-04-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: The counter for X11_GR_BINARY_POLYGON segments must
	be static, so that the count continues after re-entry. Bug #1694162.

	* term/x11.trm (X11_filled_polygon): Use X11_GR_BINARY_POLYGON as
	tag for all segments of a binary filled polygon.  Continuation
	segments were not being marked as binary. It wasn't causing obvious
	problems, but...

2007-04-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/util.c (gprintf):  Accept the ' format specifier, which
	asks for digits to be grouped and separated according to the current
	locale.  We just pass it on to the C library for application.
	Bug #1692550

2007-03-31  Ethan Merritt  <merritt@u.washington.edu>

	* term/wxt.trm (wxt_options) src/wxterminal/wxt_term.h 
	src/wxterminal/gp_cairo.c (gp_cairo_initialize_context)
	src/wxterminal/gp_cairo.h src/wxterminal/wxt_gui.cpp (wxt_graphics):
	Add explicit line cap and join properties for cairo output.
	Allows  "set term wxt {rounded|butt}"

2007-03-29  Juergen Wieferink  <wieferink@freenet.de>

	* src/eval.c src/gp_time.h src/internal.c (f_strftime f_strptime)